# book_shop

./: .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  check.py  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2024_02_02_1942-ebd024c195f1_create_tables.py  2024_02_09_1558-7dc902eaec0f_delete_unqiue_constraint_on_image_.py  2024_02_10_1853-7b40c3cd150a_remove_unique_constraint_from_product_.py  2024_02_10_1909-4123c48a941e_add_unqiue_constraint_to_user_email.py  2024_07_31_1340-d7b80fc486ef_.py  2024_08_13_1658-055076746c2b_.py  2024_08_19_2149-513c76f132d5_.py  2024_08_20_2021-f3171950b7c2_.py  2024_08_24_1946-b06d163af279_.py  2024_08_25_1707-1f2fe1f957e3_.py  2024_08_30_1938-1b04f8a5cb3a_.py  2024_09_01_1739-93d5e5c72824_.py  2024_09_01_1739-ef26a8c2f9e8_.py
application/: __init__.py  cmd.py  logs_journal.json
application/helpers/: __init__.py  custom_security.py  image_helpers.py  uuid_helpers.py
application/models/: __init__.py  mixins.py  models.py
application/repositories/: __init__.py  author_repo.py  book_order_assoc_repo.py  book_repo.py  cart_repo.py  category_repo.py  image_repo.py  order_repo.py  payment_detail_repo.py  publisher_repo.py  shopping_session_repo.py  user_repo.py
application/schemas/: __init__.py  author_schemas.py  base_schemas.py  book_schemas.py  cart_schemas.py  category_schemas.py  image_schemas.py  order_schemas.py  payment_schemas.py  publisher_schemas.py  shopping_session_schemas.py  user_schemas.py
application/services/: __init__.py  author_service.py  book_service.py  cart_service.py  category_service.py  image_service.py  order_service.py  payment_service.py  publisher_service.py  shopping_session_service.py  user_service.py
application/static/: __init__.py
application/tasks/: __init__.py  celery_init.py  tasks1.py
auth/: helpers.py
auth/certs/: jwt_private_key.pem  jwt_public_key.pem
auth/config/: __init__.py  auth_config.py
auth/repositories/: __init__.py  auth_repository.py
auth/routers/: __init__.py  auth_routers.py
auth/schemas/: __init__.py  token_schema.py
auth/services/: __init__.py  auth_service.py  permission_service.py
core/: __init__.py  abstract_repository.py  abstract_service.py  entity_base_service.py  exceptions.py
core/base_repos/: __init__.py  base.py  orm_entity_repo.py
core/config/: __init__.py  conf.py
core/db_conf/: __init__.py  config.py  db_settings.py  get_db_data.py
core/exceptions/: __init__.py  http_exceptions.py  payment_exceptions.py  (+1 more)
logger/: .env  __init__.py  logg.py
logsStorage/: Dockerfile  go.mod  go.sum
main/: __init__.py  ma1n.py  models.py  red_init.py  repositories.py
project/: docker-compose.yaml  docker-compose.yml
tests/: conftest.py
(+167 files in other folders)
