[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["kirill <Richi.mosberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = "^0.27.0.post1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
email-validator = "^2.1.0.post1"
alembic = "^1.13.1"
black = "^24.1.1"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pillow = "^10.2.0"
aioredis = "^2.0.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
